# shellas

./: .gitignore  README.md  download.py  pyproject.toml  requirements.txt  shellagent-full-doc.md
config/: model_config.yaml  safety_rules.yaml  settings.yaml
eval/: benchmark.yaml  calc_accuracy.py  eval_results.csv  run_eval.py
scripts/: build_index.py  download_model.sh  extract_compatibility.py  parse_tldr.py  start_vllm.sh
src/: __main__.py
src/cli/: app.py  display.py
src/context/: __init__.py  collector.py
src/graph/: __init__.py  state.py  workflow.py
src/graph/nodes/: context_planner.py  error_handler.py  executor.py  intent_parser.py  output_parser.py  planner.py
src/llm/: __init__.py  client.py  prompts.py
src/rag/: __init__.py  query_rewriter.py  retriever.py
src/safety/: __init__.py  guard.py
tests/: test_query_rewriter.py  test_rag.py  test_safety.py  test_workflow.py
